# mirror_jpeg_server

./: CMakeLists.txt  README.md
include/: handler_interface.hpp  http_server.hpp  logger.hpp  mirror_jpeg_handler.hpp  server_config.hpp
include/util/: logger.hpp  scope_guard.hpp  size_literals.hpp
src/: http_server.cpp  main.cpp  mirror_jpeg_handler.cpp
